--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ fastjsonschema==2.19.0
 Flask==3.0.0
 fonttools==4.47.0
 fqdn==1.5.1
+gunicorn==21.2.0
 idna==3.6
 ipykernel==6.27.1
 ipython==8.19.0
@@ -76,7 +77,7 @@ pyparsing==3.1.1
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytz==2023.3.post1
-pywin32==306
+pywin32==306;  platform_system == "Windows"
 pywinpty==2.0.12
 PyYAML==6.0.1
 pyzmq==25.1.2
