--- a/requirements.txt
+++ b/requirements.txt
@@ -78,7 +78,7 @@ python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytz==2023.3.post1
 pywin32==306; platform_system=="Windows"
-pywinpty==2.0.12
+pywinpty==2.0.12; platform_system=="Windows"
 PyYAML==6.0.1
 pyzmq==25.1.2
 referencing==0.32.0
